# CyberPhysics

./: .gitattributes  .gitignore  README.md  TODO.md  install.sh  start.sh
.github/workflows/: ci.yml
applications/: Makefile  README.md  _build_it.sh
applications/aerostack2/: Dockerfile  README.md  entrypoint.sh  launch_as2.bash  stop.bash
applications/aerostack2/mavros_mirror/: pyproject.toml
applications/aerostack2/mavros_mirror/mavros_mirror/: __init__.py
applications/aerostack2/mavros_mirror/mavros_mirror.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
applications/aerostack2/src/as2_platform_blueos/: CMakeLists.txt  package.xml
applications/aerostack2/src/as2_platform_blueos/config/: control_modes.yaml  platform.yaml
applications/aerostack2/src/as2_platform_blueos/include/as2_platform_blueos/: as2_platform_blueos.hpp
applications/aerostack2/src/as2_platform_blueos/launch/: blueos_autonomy.launch.py  blueos_platform.launch.py
applications/aerostack2/src/as2_platform_blueos/resource/: map_goal.xml
applications/aerostack2/src/as2_platform_blueos/src/: as2_platform_blueos.cpp  as2_platform_blueos_node.cpp
applications/aerostack2/src/as2_platform_blueos/web/: index.html
applications/aerostack2/synthetic_world/: README.md  pyproject.toml
applications/aerostack2/synthetic_world/synthetic_world/: __init__.py
applications/aerostack2/synthetic_world/synthetic_world.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
applications/arduino/: Dockerfile  README.md
applications/ardupilot_sitl/: Dockerfile  README.md  entrypoint.sh
applications/bcflight/: Dockerfile  README.md
applications/bcflightcontroller/: Dockerfile  README.md
applications/bitnet/: Dockerfile
applications/blackfly/: Dockerfile  README.md  entrypoint.sh
applications/boat/: Dockerfile  README.md  entrypoint.sh
applications/cactus-rt/: Dockerfile
applications/cactusrt/: README.md
applications/cbfkit/: Dockerfile  README.md
applications/chattts/: README.md
applications/comfyui/: Dockerfile  README.md  prestart.py
applications/dataengine/: Dockerfile  requirements.txt  setup.py
applications/deepresearcher/: .env.example  Dockerfile
applications/deerflow/: .env.example  Dockerfile  README.md  conf.yaml.example  entrypoint.sh
applications/demnav/: Dockerfile  README.md  entrypoint.sh  metadata.json
applications/so101/: CMakeLists.txt  Dockerfile  README.md  entrypoint.sh  package.xml
applications/so101/config/: controllers.yaml
applications/so101/launch/: description.launch.py  gazebo.launch.py
applications/so101/scripts/: evaluate_pretrained_policy.py  gazebo_command_relay.py  genesis_so101.py  groot_so101_bridge.py  isaacsim_so101.py  mock_so101_sim.py  pi0_example.py  record_groot_demo_bag.sh  regenerate_urdf.sh  run_gym_hil.py  score_picking_task.py  self_filter.launch.py  so101_acceptance_report.py  so101_cbf_control.py  so101_common.py  validate_calibration_and_dataset.py
applications/so101/worlds/: empty.sdf
applications/wildnav/src/wildnav_pkg/: package.xml  setup.cfg  setup.py
applications/wildnav/src/wildnav_pkg/launch/: wildnav.launch.py
applications/wildnav/src/wildnav_pkg/wildnav_pkg/: nav_evaluator.py  navigation_fusion.py  satellite_cache.py  seed_cache.py  wildnav_node.py
compositions/: README.md  aerodrone_hardware.yaml  aerostack2_genesis.yaml  aerostack2_isaac.yaml  aerostack2_sim.yaml  airplane_hardware.yaml  airplane_sim.yaml  arduino.yaml  bitnet.yaml  blackfly.yaml  blueos_aerostack.yaml  blueos_drone.yaml  blueos_nav_core.yaml  boat_hardware.yaml  boat_sim.yaml  comfyui.yaml  deepresearcher.yaml  deerflow.yaml  demnav.yaml  depthanything.yaml  dia.yaml  dronegui_gazebo.yaml  flightcontroller.yaml  foxglove.yaml  genesis.yaml  groot.yaml  isaacsim.yaml  jupyter.yaml  lerobot.yaml  localdeepresearcher.yaml  lunar_rover_hardware.yaml  lunar_rover_sim.yaml  mapnav.yaml  marimo.yaml  matlab.yaml  mdk.yaml  mdk_sim.yaml  nvblox.yaml  oak1.yaml  ollama.yaml  (+35 more)
hardware/: aerodrone.txt  airplane.txt  boat.txt  lunar_rover.txt  racecarneo.txt  so101.txt  submarine.txt  turret.md
systems/: README.md
systems/boat/: README.md
tests/: conftest.py  test_camera_sim_yaw.py  test_heightmap.py  test_nav_evaluator.py  test_satellite_cache.py  test_synthetic_world.py
tools/: check_ardupilot_params.py  check_compose_env_defaults.py  doctor.sh  sitl_smoke_test.sh
(+795 files in other folders)
