[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "mavros-mirror"
version = "0.1.0"
description = "Generic MAVROS telemetry mirror bridge shared by every CyberPhysics ArduPilot platform"
requires-python = ">=3.8"

[project.scripts]
mavros_mirror = "mavros_mirror:main"

[tool.setuptools.packages.find]
include = ["mavros_mirror*"]
