[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "synthetic-world"
version = "0.1.0"
description = "Shared synthetic terrain/imagery world model and local-tangent georeferencing for CyberPhysics SITL navigation validation"
requires-python = ">=3.8"
dependencies = ["numpy"]

[tool.setuptools.packages.find]
include = ["synthetic_world*"]
